# visual-odometry

./: .gitignore  CMakeLists.txt  README.md  ottobot_launch.sh  requirements.txt  setup.py
examples/: dvo_config.yaml  intrinsics.yaml  report.json  requirements-examples.txt  test_dvo.cpp  test_dvo.py
include/otto/: CameraModel.h
include/otto/core/: BaseVisualOdometry.h
include/otto/utils/: ImagePyramid.h  LieAlgebra.h  types.h
include/visual-odometry/core/: BaseDenseVisualOdometry.h  CPUDenseVisualOdometry.h  DenseVisualOdometry.h
include/visual-odometry/cuda/: common.cuh  residuals_kernel.cuh
include/visual-odometry/utils/: ImagePyramid.h  ImagePyramidGPU.h  NonLinLstSqSolver.h  YAMLLoader.h  common.h  conversions.h  interpolate.h  types.h
include/visual-odometry/weighter/: BaseWeighter.h  TDistributionWeighter.h  UniformWeighter.h
python-bindings/visual-odometry/: init.cpp  ndarray_converter.cpp  ndarray_converter.h
python-bindings/visual-odometry/core/: BaseDenseVisualOdometry.cpp  CPUDenseVisualOdometry.cpp  DenseVisualOdometry.cpp  init.cpp
python-bindings/visual-odometry/cuda/: init.cpp
python-bindings/visual-odometry/utils/: ImagePyramid.cpp  ImagePyramidGPU.cpp  conversions.cpp  init.cpp
scripts/: requirements.txt  setup.py
scripts/ottopy/: __init__.py
scripts/ottopy/utils/: __init__.py  rgbd_image_pyramid.py
src/otto/utils/: ImagePyramid.cpp  LieAlgebra.cpp
src/otto_python/: ImagePyramidBind.cpp
src/ottobot_pkg/: CMakeLists.txt  package.xml
src/ottobot_pkg/config/: camera_intrinsics.yaml  rviz_aruco_tracker.config.rviz  rviz_config.rviz
src/ottobot_pkg/include/: DVOROSNode.h
src/ottobot_pkg/include/dvo/: DenseVisualOdometryKernel.cuh  GPUDenseVisualOdometry.h  LieAlgebra.h  types.h
src/ottobot_pkg/launch/: camera_launch.launch  ottobot.launch  robot_localization.launch  rtabmap.launch
src/ottobot_pkg/scripts/: aruco_detector_node.py  dvo_test.py  kalman_filter.py  listener.py  qr_detector_node.py  realsense.py  realsense_camera.py  realsense_d435i.py  realsense_imu.py  realsense_node.py  take_single_screenshot.py  utils.py
src/ottobot_pkg/scripts/dvo/: core.py  core_gpu.py  lie_algebra.py
src/ottobot_pkg/scripts/dvo/src/: dvo_cuda.cu
src/ottobot_pkg/src/: node_dvo.cpp
src/ottobot_pkg/src/dvo/: DenseVisualOdometryKernel.cu  GPUDenseVisualOdometry.cpp  LieAlgebra.cpp
src/ottobot_pkg/test/: dvo_tests.cpp
src/utils/: ImagePyramid.cpp  LieAlgebra.cpp
src/visual-odometry/core/: BaseVisualOdometry.cpp  CPUDenseVisualOdometry.cpp  DenseVisualOdometry.cpp
src/visual-odometry/cuda/: common.cu  residuals_kernel.cu
src/visual-odometry/utils/: ImagePyramid.cpp  ImagePyramidGPU.cpp  NonLinLstSqSolver.cpp  YAMLLoader.cpp  interpolate.cpp
src/visual-odometry/weighter/: BaseWeighter.cpp  TDistributionWeighter.cpp  UniformWeighter.cpp
tests/data/: camera_intrinsics.yaml  ground_truth.json
tests/include/otto/utils/: TestImagePyramid.cpp  TestLieAlgebra.cpp
tests/otto/utils/: TestImagePyramid.cpp  TestLieAlgebra.cpp
tests/vo/utils/: test_image_pyramid.py
